--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+<h4>Pharrell Williams</h4>
           <!-- Level 2 'HAPPY' Header -->
-
+          <h2>Happy</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+          <h4>|From Despicable Me|</h4>
         </div>
       </div>
 
       <div id="back" class="album">
-
+<h3> &nbsp;&nbsp; |FROM DESPICABLE ME 2| &nbsp;&nbsp;</h3>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        
+         <h1>HAPPY</h1>
         <!-- Level 1 'HAPPY' Header -->
-
+        <h3>Written By </h3>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+        <span>PHARRELWILLIAMS.COM'<span>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+<img src="images/columbia-logo.png">
         <!-- image [columbia-logo.png] -->
-
+<span>COLUMBIARECORDS.COM'<span>
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-        
+<img src="images/sony-logo.png">
         <!-- image [sony-logo.png] -->
 
       </div>
